--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "customer-space",
+    "database": "customer_space",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "logging": false
@@ -17,7 +17,7 @@
   "production": {
     "username": "customer",
     "password": "Wx6a?q044",
-    "database": "customer-space",
+    "database": "customer_space",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
