--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^3.6.5",
     "sequelize": "^6.35.1",
     "sequelize-cli": "^6.6.2",
+    "sharp": "^0.33.2",
     "socket.io": "^4.7.4",
     "uuid": "^9.0.1"
   },
