--- a/.env
+++ b/.env
@@ -1,14 +1,16 @@
-SERVER_PORT=8080
+SERVER_PORT=8000
+NODE_ENV=development
 
 DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=customer-space
+DB_NAME_PROD=api-customer
 DB_USER=root
 DB_PASS=
 
 BCRYPT_SALT_ROUND=10
 
-JWT_SECRET=@monpapayed*nsuncoindemac^ursilyaunpapayecestmoiquilaits/%$,emelagrainerondeetnoiriletaittoutpetitcomm\/emoimaislevoilalerestecestatoidevoirebymarley~`
+JWT_SECRET=
 
 JWT_DURING=10h
-JWT_ALGORITHM=RS512
+JWT_ALGORITHM=HS256
