--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_PASS=
 
 BCRYPT_SALT_ROUND=10
 
-JWT_SECRET=
+JWT_SECRET=@mrtrt...npapayed*nsuncoindemac^ursilyaunpapayecestmoiquilaits/%$,emertrrtrrtlagrainerondertrtetnoiriletaittoutpeti..tcomm\/emoimai,.slevoilalerestecestatoidevoirebymarley~`
 
 JWT_DURING=10h
 JWT_ALGORITHM=HS256
